# curchat

./: .gitignore  CMakeLists.txt  readme.txt
src/: client.cpp  curses_client.cpp  curses_client.hpp  message.cpp  message.hpp  msg_pool.hpp  server.cpp  tcp_client.cpp  tcp_client.hpp  tcp_server.cpp  tcp_server.hpp
